<resources>
    <string name="app_name">CST338_TrackTournament</string>

    <string name="welcome_to_track_tournament">Welcome to Track Tournament!</string>
    <string name="sign_in_to_log_your_training">Sign in to log your training</string>
    <string name="user_name">User Name:</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="new_user_click_here">New User? Click here!</string>
    <string name="coach_team_review">Coach\nTeam Review</string>
    <string name="new_race_distance">Add a new race distance</string>
    <string name="list_runners_by_pace">List runners by pace</string>
    <string name="list_runners_by_training">List runners by training</string>
    <string name="quit">Quit</string>
    <string name="add_a_new_race_distance">Add a New Race Distance</string>
    <string name="enter_your_training_below">Enter your training below</string>
    <string name="name">Name</string>
    <string name="distance_name">Distance Name</string>
    <string name="minimum_distance">Minimum Distance</string>
    <string name="minimum_distance_for_this_name">Minimum Distance for this Race</string>
    <string name="maximum_distance">Maximum Distance</string>
    <string name="maximum_distance_for_this_race">Maximum Distance for this Race</string>
    <string name="save_this_race_type">Save this race type!</string>
    <string name="users_training"><![CDATA[<User>\'s Training]]></string>
    <string name="enter_training">Enter Training</string>
    <string name="review_training">Review Training</string>
    <string name="user_training_quit">Quit</string>
    <string name="new_training_for_user"><![CDATA[New Training for\n<User>]]></string>
    <string name="enter_training_below">Enter training below</string>
    <string name="newTrainingDate">Date:</string>
    <string name="enter_training_date">Enter Date: yyyy-mm-dd</string>
    <string name="enter_new_training_distance">Distance:</string>
    <string name="enter_distance">Enter Distance</string>
    <string name="enter_new_training_time">Time:</string>
    <string name="competition_run">Competition Run?</string>
    <string name="iscompetionrun">IsCompetionRun</string>
    <string name="check_if_this_is_a_competition_run">Check if competition run</string>
    <string name="log_it">Log It!</string>
    <string name="new_training_quit">Quit</string>
    <string name="create_a_new_user">Create a New User</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="cancel_new_user">Cancel</string>
    <string name="coach">Coach</string>
    <string name="new_training_enter_time">Enter Time</string>
    <string name="no_logs">Runners have not logged any training!</string>
    <string name="coach_back">Return to Training</string>
    <string name="manage_race_distances">Manage Race Distances</string>
    <string name="manage_race_names_and_distances">Manage Race Names and Distances</string>
    <string name="name_of_the_race_to_edit">Name of the Race to Edit</string>
    <string name="enter_race_name">Enter Race Name</string>
    <string name="display_race_details">Display Race Details</string>
    <string name="race_name">Race Name</string>
    <string name="enter_updated_race_name">Enter Updated Race Name</string>
    <string name="new_distance">New Distance</string>
    <string name="update_any_desired_values_above_and_click_below_to_save">Update any desired values above and click to save</string>
    <string name="update_race">Update Race</string>
    <string name="delete_race">Delete Race</string>
</resources>