<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/main"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainActivity">

    <TextView
            android:layout_width="390dp"
            android:layout_height="55dp"
            android:id="@+id/welcomeToTrackTournamentLabelTextView"
            android:text="@string/welcome_to_track_tournament"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dip"
            android:textSize="24sp"
            android:paddingTop="8dp"
            android:textAlignment="center"
            android:textStyle="bold"
    />

    <TextView
            android:layout_width="390dp"
            android:layout_height="137dp"
            android:id="@+id/signInLabelTextView"
            android:text="@string/sign_in_to_log_your_training"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeToTrackTournamentLabelTextView"
            android:textSize="24sp"
            android:paddingTop="8dp"
            android:textAlignment="center"
            android:layout_marginStart="52dp"/>
    <TextView
            android:text="@string/user_name"
            android:layout_width="184dp"
            android:layout_height="36dp"
            android:id="@+id/userNameLabelTextView"
            tools:layout_editor_absoluteY="211dp"
            android:layout_marginStart="52dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:layout_marginEnd="257dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInLabelTextView"
    />

    <EditText
            android:layout_width="386dp"
            android:layout_height="53dp"
            android:id="@+id/userNameInputEditText"
            android:inputType="textAutoComplete"
            app:layout_constraintTop_toBottomOf="@+id/userNameLabelTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/enter_user_name"
            android:textSize="24sp"
            android:layout_marginStart="52dp"/>

    <TextView
            android:text="@string/password"
            android:layout_width="184dp"
            android:layout_height="36dp"
            android:id="@+id/passwordNameLabelTextView"
            tools:layout_editor_absoluteY="211dp"
            android:layout_marginStart="52dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:layout_marginEnd="257dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameInputEditText"
    />

    <EditText
            android:layout_width="386dp"
            android:layout_height="53dp"
            android:id="@+id/passwordInputEditText"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/passwordNameLabelTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/enter_password"
            android:textSize="24sp"
            android:layout_marginStart="52dp"
            android:autofillHints="Enter Password"/>
    <Button
            android:text="@string/log_in"
            android:layout_width="392dp"
            android:layout_height="154dp"
            android:id="@+id/logInButton"
            tools:layout_editor_absoluteX="46dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="148dp"/>
    <Button
            android:text="@string/new_user_click_here"
            android:layout_width="390dp"
            android:layout_height="41dp"
            android:id="@+id/button2"
            android:background=""
            android:textColor="@color/black"
            tools:layout_editor_absoluteY="641dp"
            tools:layout_editor_absoluteX="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>