<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewTrainingForUser">

    <TextView
            android:text="@string/new_training_for_user"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/newTrainingForUserLabelTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:text="@string/enter_training_below"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/enterTrainingBelowLabelTextView"

            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newTrainingForUserLabelTextView"
            android:hint="@string/check_if_this_is_a_competition_run"
    />
    <TextView
            android:text="@string/newTrainingDate"
            android:layout_width="184dp"
            android:layout_height="36dp"
            android:id="@+id/newTrainingDateLabelTextView"
            android:layout_marginStart="52dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:layout_marginEnd="218dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterTrainingBelowLabelTextView"
    />

    <EditText
            android:layout_width="350dp"
            android:layout_height="53dp"
            android:id="@+id/newTrainingDateInputEditText"
            android:inputType="date"
            app:layout_constraintTop_toBottomOf="@+id/newTrainingDateLabelTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/enter_training_date"
            android:textSize="24sp"
            android:gravity="center"
            android:autofillHints="Enter User Name"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/enter_new_training_distance"
            android:layout_width="184dp"
            android:layout_height="36dp"
            android:id="@+id/newTrainingDistanceLabelTextView"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:layout_marginEnd="175dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newTrainingDateInputEditText"
    />
    <EditText
            android:layout_width="350dp"
            android:layout_height="53dp"
            android:id="@+id/newTrainingDistanceInputEditText"
            android:inputType="textAutoComplete"
            app:layout_constraintTop_toBottomOf="@+id/newTrainingDistanceLabelTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/enter_distance"
            android:textSize="24sp"
            android:gravity="center"
            android:autofillHints="Enter Distance"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/enter_new_training_time"
            android:layout_width="184dp"
            android:layout_height="36dp"
            android:id="@+id/newTrainingTimeLabelTextView"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:layout_marginEnd="175dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newTrainingDistanceInputEditText"
    />
    <EditText
            android:layout_width="350dp"
            android:layout_height="53dp"
            android:id="@+id/newTrainingTimeInputEditText"
            android:inputType="textAutoComplete"
            app:layout_constraintTop_toBottomOf="@+id/newTrainingTimeLabelTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/enter_distance"
            android:textSize="24sp"
            android:gravity="center"
            android:autofillHints="Enter Distance"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/competition_run"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:id="@+id/competitionRunLabelTextView"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:layout_marginEnd="165dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newTrainingTimeInputEditText"
    />
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:id="@+id/checkBox"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newTrainingTimeInputEditText"
            app:layout_constraintStart_toEndOf="@+id/competitionRunLabelTextView"
            app:layout_constraintHorizontal_bias="0.142"/>
    <Button
            android:text="@string/log_it"
            android:textColor="@color/black"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:id="@+id/newTrainingForUserLogItButton"
            android:backgroundTint="@color/design_default_color_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="230dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/new_training_quit"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:id="@+id/newTrainingForUserQuitButton"
            android:background="@color/white"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>