<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewUserActivity">

    <TextView
            android:layout_width="390dp"
            android:layout_height="55dp"
            android:id="@+id/welcomeToTrackTournamentLabelTextView"
            android:text="@string/welcome_to_track_tournament"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dip"
            android:textSize="24sp"
            android:paddingTop="8dp"
            android:textAlignment="center"
            android:textStyle="bold"
    />

    <TextView
            android:layout_width="390dp"
            android:layout_height="85dp"
            android:id="@+id/createNewUserLabelTextView"
            android:text="@string/create_a_new_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeToTrackTournamentLabelTextView"
            android:textSize="24sp"
            android:paddingVertical="20dp"
            android:paddingTop="8dp"
            android:textAlignment="center"
            android:layout_marginStart="12dp"/>

    <TextView
            android:text="@string/user_name"
            android:layout_width="184dp"
            android:layout_height="36dp"
            android:id="@+id/newUserNameLabelTextView"
            android:layout_marginStart="52dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginEnd="218dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createNewUserLabelTextView"
    />

    <EditText
            android:layout_width="350dp"
            android:layout_height="53dp"
            android:id="@+id/newUserNameInputEditText"
            android:inputType="textAutoComplete"
            app:layout_constraintTop_toBottomOf="@+id/newUserNameLabelTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/enter_user_name"
            android:textSize="24sp"
            android:gravity="center"
            android:autofillHints="Enter User Name"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/password"
            android:layout_width="184dp"
            android:layout_height="36dp"
            android:id="@+id/newPasswordNameLabelTextView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginEnd="175dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newUserNameInputEditText"
    />
    <EditText
            android:layout_width="350dp"
            android:layout_height="53dp"
            android:id="@+id/newPasswordInputEditText"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordNameLabelTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/enter_password"
            android:textSize="24sp"
            android:gravity="center"
            android:autofillHints="Enter New Password"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/password"
            android:layout_width="184dp"
            android:layout_height="36dp"
            android:id="@+id/verifyPasswordNameLabelTextView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginEnd="175dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordInputEditText"
    />
    <EditText
            android:layout_width="350dp"
            android:layout_height="53dp"
            android:id="@+id/verifyPasswordInputEditText"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/verifyPasswordNameLabelTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/re_enter_password"
            android:textSize="24sp"
            android:gravity="center"
            android:autofillHints="Re-enter Password"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:text="@string/register"
            android:textColor="@color/black"
            android:layout_width="360dp"
            android:layout_height="85dp"
            android:id="@+id/registerButton"
            android:backgroundTint="@color/design_default_color_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="100dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:text="@string/cancel_new_user"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:id="@+id/cancelNewUserButton"
            android:background="@color/white"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>